--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Working with Git!</title>
 </head>
 <body>
+
+    <header>
+        <h1>Learning Git!</h1>
+    </header>
     
 </body>
 </html>
