--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
     <header>
         <h1>Learning Git!</h1>
     </header>
+
+    <section>
+        <h2>About</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut in, voluptas, distinctio perferendis exercitationem ea at quis temporibus laborum natus sapiente voluptatibus! Aspernatur magni maxime odit corrupti. Temporibus, optio velit.</p>
+    </section>
+
+    <section>
+        <h2>Gallery</h2>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id ipsa dolore nemo sint officiis cupiditate illum, ad fugit, quos temporibus nesciunt quibusdam dicta eaque consectetur odio commodi! Doloribus vel, mollitia neque quidem dolorum quo tempora tempore explicabo alias eveniet quaerat fugiat vero fugit hic ducimus, eaque, amet praesentium dolores officia.</p>
+    </section>
     
 </body>
 </html>
