--- a/index.html
+++ b/index.html
@@ -19,7 +19,14 @@
 
     <section>
         <h2>Gallery</h2>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id ipsa dolore nemo sint officiis cupiditate illum, ad fugit, quos temporibus nesciunt quibusdam dicta eaque consectetur odio commodi! Doloribus vel, mollitia neque quidem dolorum quo tempora tempore explicabo alias eveniet quaerat fugiat vero fugit hic ducimus, eaque, amet praesentium dolores officia.</p>
+        <ul>
+            <li>
+                <p>A very short list</p>
+            </li>
+            <li>
+                <p>I'm going through changes</p>
+            </li>
+        </ul>
     </section>
 
     <footer>
